--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.12.2",
+    "echarts": "^6.0.0",
     "element-plus": "^2.11.4",
     "md5js": "^1.0.7",
     "nprogress": "^0.2.0",
